2003-03-15  Christian Stimming  <stimming@tuhh.de>

	* src/engine/gnc-book.h, src/engine/*.h: Added a lot of
	documentation comments, improved doxygen output. At least the most
	important header files will now show up in doxygen.

2003-03-14  David Hampton  <hampton@employees.org>

	* src/gnome/window-reconcile.c (gnc_start_recn_date_changed):
	Don't reverse the account balance here. The routine called to
	retrieve the account balance has already taken care of reversing
	the sign where necessary.

2003-03-13  David Hampton  <hampton@employees.org>

	* src/app-utils/option-util.c (gnc_option_get_range_info): Reapply
	Derek's fix for a crash when opening the Pref's dialog when using
	guile-1.6.1.  Lost when converting to the scheme scm_xxx
	interface.
	
2003-03-13  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Makefile.am: make sure to add INTLLIBS in case
	  we're compiling against an external -lintl (like on Solaris)

	* src/calculation/Makefile.am: fix to build on systems that don't
	  have GUILE installed in the system path or in the same place
	  as GLIB.

2003-03-12  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-transfer.c: the Euroland currency rates
	  were inverted in the transfer dialog.

	* src/app-utils/gnc-ui-util.c:
	* src/gnome/top-level.c:
	  the Account Separator option was moved to the Accounts page --
	  reference is correctly.
	Fixes #106673
	
2003-03-11  Derek Atkins  <derek@ihtfp.com>

	* src/scm/main-window.scm:  turn off the report-total by default

2003-03-10  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncEmployee.c: name the employee name
	  the specific 'printable' name.
	* src/business/business-core/gncInvoice.c: if an invoice is owned
	  by an EMPLOYEE, then consider it an expense voucher.  Check the
	  entry payment-type and post directly to a CC account if one is
	  available.
	* src/business/business-core/gncOwner.c: use the employee->address->name
	  instead of the employee->username