@@ -1,3 +1,11 @@
+2003-03-15  David Hampton  <hampton@employees.org>
+
+	* src/register/ledger-core/split-register.c
+	(gnc_split_register_config): Force the cursor to the first line of
+	a transaction split before disabling "double line" mode in the
+	register.  This prevents the register refresh code from trying to
+	update a cell that is no longer visible.  #105346
+
 2003-03-15  Christian Stimming  <stimming@tuhh.de>
 
 	* src/engine/gnc-book.h, src/engine/*.h: Added a lot of
